@@ -1,3 +1,8 @@
+2020-05-04  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/39612
+	* gcc.dg/tree-ssa/pr39612.c: New testcase.
+
 2020-05-04  Uroš Bizjak  <ubizjak@gmail.com>
 
 	PR target/94650
